<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">守卫者号</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="app_title">手机守卫者</string>
    <string name="update_dialog_title">新版本更新</string>
    <string name="update_dialog_message">检测到新版本  请及时更新</string>
    <string name="update_dialog_ok">确认下载</string>
    <string name="update_dialog_cancel">下次再说</string>
    <string name="main_title">功能列表</string>
    <string name="setting_title">高级设置</string>
    <string name="update_title">自动更新</string>
    <string name="update_content_open">自动更新已打开</string>
    <string name="update_content_close">自动更新已关闭</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="title_dialog">输入密码</string>
    <string name="pwd_input">请输入密码</string>
    <string name="pwd_confirm">请再次输入密码</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="setup1_title">1欢迎使用手机防盗</string>
    <string name="setup1_op1">您的手机防盗卫士:</string>
    <string name="setup1_op2">sim卡变更报警</string>
    <string name="setup1_op3">GPS追踪</string>
    <string name="setup1_op4">远程数据销毁</string>
    <string name="setup1_op5">远程锁屏</string>
    <string name="setup1_op6">下一步</string>
    <string name="setup1_op7">上一步</string>
    <string name="setup2_title">2手机卡绑定</string>
    <string name="setup2_op1">通过SIM卡绑定:</string>
    <string name="setup2_op2">重启手机时SIM卡发生变化将发送报警短信</string>
    <string name="setup2_op3">绑定SIM卡</string>
    <string name="setup2_op4">sim卡没有绑定</string>
    <string name="setup2_op5">sim卡已绑定</string>
    <string name="setup3_title">3设置安全号码</string>
    <string name="setup3_op1">SIM卡变更后\n报警短信将会发送到安全号码</string>
    <string name="setup3_op2">选择联系人</string>
    <string name="setup4_title">4设置完成</string>
    <string name="setup4_op1">开启防盗保护</string>
    <string name="setup_title">手机防盗</string>
    <string name="setup_op1">安全号码</string>
    <string name="setup_op2">防盗保护是否开启</string>
    <string name="setup_op3">重新进入设置向导</string>
    <string name="setup_op4">功能简介：</string>
    <string name="setup_op5">GSP追踪：#*location*#</string>
    <string name="setup_op6">播放报警音乐：#*alarm*#</string>
    <string name="setup_op7">远程删除数据：#*wipedata*#</string>
    <string name="setup_op8">远程锁屏：#*lockscreen*#</string>
    <string name="title_activity_adavanced_tools">AdavancedToolsActivity</string>
    <string name="advanced_tool_title">高级工具</string>
    <string name="advanced_text">归属地查询</string>
    <string name="home_place_find">归属地查询</string>
    <string name="home_place_bt">查询</string>
    <string name="home_place_result">查询结果</string>
    <string name="title_activity_home_place_find">HomePlaceFindActivity</string>
    <string name="attention_title">来电提醒</string>
    <string name="attention_content_open">来电提醒已打开</string>
	<string name="attention_content_close">来电提醒已关闭</string>
	<string name="message_title">通讯卫士</string>
	<string name="attention_add">添加</string>
	<string name="title_blackname">请输入黑名单号码</string>
	<string name="blackname_input">请输入黑名单号码</string>
	<string name="phone_interpect">电话拦截</string>
	<string name="message_interpect">短信拦截</string>
</resources>
