<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.xj.mobileprotecter"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="fill_parent"
      
        android:gravity="center"
        android:text="@string/setup_title"
        android:layout_height="@dimen/title_height"
          android:background="@color/blank_blue"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >

        <LinearLayout android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setup_op1"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_bnm"
            android:gravity="right"
             />
		</LinearLayout>
		
        <TextView android:id="@+id/tv_lock"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/setup_op2"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/lock"
             />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
    		android:onClick="reboot"
    		android:clickable="true"
            android:text="@string/setup_op3" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
           
            android:text="@string/setup_op4" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/star_on"
            android:gravity="center_vertical"
            android:text="@string/setup_op5" />
          <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/star_on"
            android:gravity="center_vertical"
            android:text="@string/setup_op6" />
            <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/star_on"
            android:gravity="center_vertical"
            android:text="@string/setup_op7" />
              <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/star_on"
            android:gravity="center_vertical"
            android:text="@string/setup_op8" />
    </LinearLayout>

   

</RelativeLayout>