<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <TextView android:id="@+id/title"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:text="@string/title_dialog"/>"

	
	  <EditText android:id="@+id/pwd_input"
        android:layout_width="280dip"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_input"
        android:password="true"/>
	     
	   <EditText android:id="@+id/pwd_confirm"
        android:layout_width="280dip"
        android:layout_height="wrap_content"
        android:hint="@string/pwd_confirm"
        android:password="true"/>
	   <LinearLayout android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:gravity="center_horizontal">
	       <Button android:id="@+id/ok"
	           android:layout_width="100dip"
	           android:layout_height="wrap_content"
	           android:text="@string/ok"/>
	        <Button android:id="@+id/cancel"
	            android:layout_marginLeft="50dp"
	           android:layout_width="100dip"
	           android:layout_height="wrap_content"
	           android:text="@string/cancel"/>
	   </LinearLayout>
	
</LinearLayout>
