<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="#ffffff" >
    
    <TextView android:id="@+id/title"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:background="@color/yellow"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black"
        android:text="@string/title_blackname"/>"

	
	  <EditText android:id="@+id/num_input"
        android:layout_width="280dip"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="@string/blackname_input"
        />
	    
	   <LinearLayout android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:gravity="center_horizontal">
	       
	       <CheckBox android:id="@+id/intercept_phone"
	           android:layout_width="wrap_content"
	            android:textColor="@android:color/black"
	           android:layout_height="wrap_content"
	           android:singleLine="true"
	           android:text="@string/phone_interpect"
	           />
	        <CheckBox android:id="@+id/intercept_message"
	            android:layout_marginLeft="10dp"
	             android:singleLine="true"
	             android:textColor="@android:color/black"
	           android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:text="@string/message_interpect"/>"
	    </LinearLayout>
	  
	   <LinearLayout android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
	       android:orientation="horizontal"
	       android:gravity="center_horizontal">
	       <Button android:id="@+id/ok"
	           android:layout_width="100dip"
	           android:background="@color/blue"
	           android:layout_height="wrap_content"
	           android:text="@string/ok"/>
	        <Button android:id="@+id/cancel"
	            android:layout_marginLeft="50dp"
	           android:layout_width="100dip"
	             android:background="@color/blue"
	           android:layout_height="wrap_content"
	           android:text="@string/cancel"/>
	   </LinearLayout>
	
</LinearLayout>
