<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.xj.mobileprotecter"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background" >

     <TextView android:id="@+id/tv_title"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:gravity="center"
        android:textSize="20sp"
        android:background="@color/blank_blue"
        android:text="@string/home_place_find"/>
     
    <EditText android:id="@+id/et_phonenum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_marginTop="20dp"
        android:inputType="phone"/>
    <Button  android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_phonenum"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="find"
        android:background="@drawable/item_main_shape"
        android:id="@+id/bt_find"
        android:text="@string/home_place_bt"/>
    <TextView android:id="@+id/tv_result"
        android:layout_marginTop="20dp"
        android:layout_height="fill_parent"
        android:layout_width="wrap_content"
        android:hint="@string/home_place_result"
        android:layout_below="@+id/bt_find"/>
</RelativeLayout>